YARR: . doesn't match non-BMP Unicode characters in some cases https://bugs.webkit.org/show_bug.cgi?id=187248

Reviewed by Geoffrey Garen.

JSTests:

New regression test.

* stress/regexp-with-nonBMP-any.js: Added.

Source/JavaScriptCore:

The safety check in optimizeAlternative() for moving character classes that only consist of BMP
characters did not take into account that the character class is inverted.  In this case, we
represent '.' as "not a newline" using the newline character class with an inverted check.
Clearly that includes non-BMP characters.

The fix is to check that the character class doesn't have non-BMP characters AND it isn't an
inverted use of that character class.

* yarr/YarrJIT.cpp:
(JSC::Yarr::YarrGenerator::optimizeAlternative):


Canonical link: https://commits.webkit.org/202751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233690 268f45cc-cd09-0410-ab3c-d52691b4dbfc